minor adjustments to sencondary nav, fixed last row orphans on flex-wrap grids

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -102,27 +102,6 @@
         padding-left: 0;
         li {
             flex-basis: 30%;
-            // &:nth-child(1) {
-            // a {
-            // i {
-            // color: $ucsc--green;
-            // }
-            // }
-            // }
-            // &:nth-child(2) {
-            // a {
-            // i {
-            // color: $ucsc--magenta;
-            // }
-            // }
-            // }
-            // &:nth-child(3) {
-            // a {
-            // i {
-            // color: $ucsc--lighter-blue;
-            // }
-            // }
-            // }
         }
         a {
             display: flex;
@@ -134,6 +113,10 @@
             border: 1px solid #ddd;
             .fas {
                 font-size: 48px;
+            }
+            p {
+                margin-bottom: 0;
+                text-align: center;
             }
         }
     }
